# OSAIP

./: .gitignore  .spectral.yaml  CHANGELOG.md  COMPLIANCE_NL.md  COMPLIANCE_UWV.md  Compliance_OpenStudio_UWV_NL.docx  Makefile  PROJECT_SPEC.md  README.md  SECURITY.md  conftest.py  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_foundation.py  0002_connections_datasets.py  0003_recipes_jobs.py
apps/api/osaip_api/: __init__.py  app.py  audit.py  build_service.py  config.py  db.py  etag.py  events.py  export_openapi.py  idempotency.py  job_logs.py  main.py  middleware.py  models.py  notifications.py  object_refs.py  permissions.py  problem.py  propagation.py  recipe_execution.py  recipes_service.py  schemas.py  secrets.py  seed.py  sources.py
apps/api/osaip_api/auth/: deps.py  oidc.py  service.py
apps/api/osaip_api/routers/: audit_admin.py  auth.py  builds.py  connections.py  datasets.py  dev.py  events.py  flow.py  health.py  me.py  notifications.py  projects.py  recipes.py  search.py  uploads.py  well_known.py
apps/api/osaip_api/seed_data/: sales_orders.csv
apps/api/tests/: conftest.py  fake_idp.py  test_audit.py  test_auth.py  test_builds.py  test_connections.py  test_datasets.py  test_events_sse.py  test_executor.py  test_flow.py  test_health.py  test_permissions.py  test_projects.py  test_recipe_preview.py  test_recipes.py  test_secrets.py  test_uploads.py
apps/web/: index.html  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/e2e/: 01-login.spec.ts  02-project-crud.spec.ts  03-rbac.spec.ts  04-keyboard-dark.spec.ts  05-omnibar.spec.ts  06-sse-inbox.spec.ts  07-a11y.spec.ts  08-hub-mobile.spec.ts  09-states.spec.ts  10-visual.spec.ts  11-upload-csv.spec.ts  12-postgres-dataset.spec.ts  13-bad-creds.spec.ts  14-flow-build.spec.ts  15-stale-rebuild.spec.ts  helpers.ts  tsconfig.json
apps/web/e2e/fixtures/: orders.csv
apps/web/src/: App.tsx  main.tsx  styles.css
apps/web/src/app/: router.tsx
apps/web/src/features/auth/: LoginPage.tsx  api.ts
apps/web/src/features/datasets/: DatasetPage.tsx  DatasetsPage.tsx  MetaFields.tsx  RegisterPanel.tsx  SchemaPreview.tsx  UploadPanel.tsx  lib.tsx
apps/web/src/features/flow/: CodeEditor.tsx  FlowPage.tsx  Inspector.tsx  PreviewGrid.tsx  RecipeConfigForm.tsx  RunDrawer.tsx  graph.ts  useColorMode.ts  vm.ts
apps/web/src/features/hub/: HubPage.tsx
apps/web/src/features/jobs/: JobPage.tsx  JobsPage.tsx
apps/web/src/features/notifications/: InboxDrawer.tsx  SseBridge.tsx  sse.ts
apps/web/src/features/omnibar/: Omnibar.tsx
apps/web/src/features/projects/: ConnectionsTab.tsx  CreateProjectPanel.tsx  ProjectHome.tsx  ProjectSettings.tsx  ProjectsHome.tsx
apps/web/src/features/shell/: AppShell.tsx  Rail.tsx  StubPage.tsx  TopBar.tsx  nav.ts  theme.ts
apps/web/src/lib/: NativeSelect.tsx  ScrollRegion.tsx  problem.ts
apps/worker/: pyproject.toml
apps/worker/osaip_worker/: __init__.py  executor.py  main.py  sandbox.py
apps/worker/tests/: test_sandbox.py
docs/: deployment-checklist.md
docs/adr/: 0001-bff-oidc-auth.md  0002-asyncpg-over-psycopg.md  0003-sse-event-bus.md  0004-license-policy-exceptions.md  0005-compliance-pack-p0.md  0006-secrets-and-engine-foundations.md  0007-jobs-recipes-sandbox.md
docs/plans/: phase-0.md  phase-1.md  phase-2.md
infra/compose/: docker-compose.yml
infra/compose/keycloak/: realm-osaip.json
infra/compose/seaweedfs/: s3.json
scripts/: check_bundle_size.mjs  check_licenses.py
