[project]
name = "osaip-api"
version = "0.1.0"
description = "OSAIP FastAPI application (BFF, projects, audit, search, SSE)"
requires-python = ">=3.12"
dependencies = [
    "osaip-shared",
    "osaip-engine",
    "fastapi>=0.116",
    "uvicorn[standard]>=0.35",
    "sqlalchemy[asyncio]>=2.0.41",
    "alembic>=1.16",
    "asyncpg>=0.30",
    "pydantic[email]>=2.11",
    "pydantic-settings>=2.10",
    "authlib>=1.6",
    "itsdangerous>=2.2",
    "sse-starlette>=2.3",
    "orjson>=3.10",
    "httpx>=0.28",
    "cryptography>=44.0",
]

[tool.uv.sources]
osaip-shared = { workspace = true }
osaip-engine = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["osaip_api"]
