[project]
name = "osaip-worker"
version = "0.1.0"
description = "OSAIP worker — job runner and schedulers (Phase 0: heartbeat + event pruning)"
requires-python = ">=3.12"
dependencies = [
    "osaip-shared",
    "osaip-engine",
    "sqlalchemy[asyncio]>=2.0.41",
    "asyncpg>=0.30",
    "pydantic-settings>=2.10",
]

[tool.uv.sources]
osaip-shared = { workspace = true }
osaip-engine = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["osaip_worker"]
